--- a/style.css
+++ b/style.css
@@ -17,3 +17,11 @@ body{
   table {
     overflow: auto;
   }
+
+  small {
+    color: var(--c-black-5);
+  }
+
+  small > * {
+    color: var(--c-black-5);
+  }
